--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "espero-soft/faker": "dev-master",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.21",
+        "select2/select2": "^4.0",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "6.2.*",
         "symfony/console": "6.2.*",
