--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/orm": "^2.15",
         "espero-soft/dateformat": "dev-master",
         "espero-soft/faker": "dev-master",
+        "exercise/htmlpurifier-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.21",
         "select2/select2": "^4.0",
