--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     image_dir: '%kernel.project_dir%/public/assets/images/articles'
     static_dir: '%kernel.project_dir%/public'
+    profile_picture_dir: '%kernel.project_dir%/public/assets/images/Profile'
 
 services:
     # default configuration for services in *this* file
