--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.15",
+        "easycorp/easyadmin-bundle": "^4.6",
         "espero-soft/dateformat": "dev-master",
         "espero-soft/faker": "dev-master",
         "exercise/htmlpurifier-bundle": "*",
